--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/medapp
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/medapp?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=test1234
+spring.jpa.show-sql=true
+
 server.port=8443
 server.ssl.enabled=true
 server.ssl.key-store=src/main/resources/medapp.p12
