Disable SSL for develop because of React native not working with invalid development certificate; return less date on all healthchecks GET but return all data on healthcheck details GET

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,16 @@ spring.datasource.username=root
 spring.datasource.password=test1234
 spring.jpa.show-sql=true
 
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-store=src/main/resources/medapp.p12
-server.ssl.key-store-password=medapp
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=medapp
+server.port=8080
+# DISABLED SSL - REACT NATIVE COULD NOT WORK WITH INVALID CERTIFICATE MADE FOR DEVELOP
+#server.port=8443
+#server.ssl.enabled=true
+#server.ssl.key-store=src/main/resources/medapp.p12
+#server.ssl.key-store-password=medapp
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alias=medapp
 
 spring.datasource.initialization-mode=always
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=
+DEBUG
