Add PaginationService - use it on GET healthchecks, doctors, specializations; implement full Amazon S3 file upload with Reports entity

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
             <artifactId>aws-java-sdk</artifactId>
             <version>1.11.762</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.1.5.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
