--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/medapp?useUnicod
 spring.datasource.username=root
 spring.datasource.password=test1234
 spring.jpa.show-sql=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.location="~/Downloads"
 
 server.port=8080
 # DISABLED SSL - REACT NATIVE COULD NOT WORK WITH INVALID CERTIFICATE MADE FOR DEVELOP
