--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/medapp?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=test1234
@@ -15,7 +15,8 @@ server.port=8080
 #server.ssl.key-store-type=PKCS12
 #server.ssl.key-alias=medapp
 
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
+#spring.flyway.baseline-on-migrate=true
 
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=
 DEBUG
