Fix search healthchecks by user id and doctor's fullname or specialization; Clean up unused imports and reformat code;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.datasource.password=test1234
 spring.jpa.show-sql=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.location="~/Downloads"
-
 server.port=8080
 # DISABLED SSL - REACT NATIVE COULD NOT WORK WITH INVALID CERTIFICATE MADE FOR DEVELOP
 #server.port=8443
@@ -14,9 +13,7 @@ server.port=8080
 #server.ssl.key-store-password=medapp
 #server.ssl.key-store-type=PKCS12
 #server.ssl.key-alias=medapp
-
 #spring.datasource.initialization-mode=always
 #spring.flyway.baseline-on-migrate=true
-
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=
-DEBUG
+DEBUG=
